# Feishu-Doc-Crawler

./: .gitignore  README.md  feishu_server.py  manifest.json  pyproject.toml  待优化清单.md
background/: background.js
content/: content.js
popup/: popup.css  popup.html  popup.js  theme.js  tree.js
scripts/: start-server.bat  start-server.command  start-server.sh
server/: __init__.py  __main__.py  app.py  config.py  folders.py  images.py  lark_client.py  markdown.py  wiki.py
tests/: conftest.py  test_bugfixes.mjs  test_concurrency.mjs  test_search.mjs  test_server.py  test_theme.mjs  test_tree.mjs
